2009-02-24  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp_xml.hrl, include/exmpp_xmpp.hrl,
	include/internal/exmpp_xmpp.hrl: Add type declarations to records.
	This is used by dialyzer.

2009-02-23  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* README: State R12B as minimum version.

	* src/core/exmpp_stanza.erl: Use exmpp_jid:jid_to_binary/1.

2009-02-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Erlang R12B is now the minimum version to build and use Exmpp.

	* m4/erlang.m4: Add macros to check Erlang release and ERTS version.

	* configure.ac: Check the Erlang release to be R12B. With this new
	requirement, http_base_64 and erl_ddll workarounds aren't neede
	anymore.

	* src/core/exmpp_internals.erl: Remove erl_ddll workaround.

	* src/core/exmpp_utils.erl: Remove http_base_64 workaround and now
	useless helpers.

	* src/server/exmpp_server_sasl.erl, src/client/exmpp_client_sasl.erl:
	Use 'base64' directly now.

2009-02-20  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* src/core/exmpp_jid.erl: Fix bug when trying to extract individual
	components from an empty (non initialized) #jid. 

2009-02-17  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_compress.erl: Fix a typo in proplists module name; we
	were using 'prolists'. Spotted by dialyzer.

	* src/core/exmpp_jid.erl: Rename as_binary_or_undefined/1 to
	as_binary/1 and remove the clause with 'undefined' because it will
	never happen. Spotted by dialyzer.

2009-02-11  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: The '-Wall' option to the compiler is GCC-specific.
	Only use it when we're using GCC; this fixes the build with Sun Studio
	for instance.

2009-01-29  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/Emakefile.js: Renamed Emakefile.in.js to Emakefile.js.

	* include/internal/exmpp_known_attrs.hrl.js,
	include/internal/exmpp_known_nss.hrl.js,
	include/internal/exmpp_known_elems.hrl.js,